# cram_experimental

./: .gitignore  README.md  stack.xml
bullet_reasoning_interface/: bullet-reasoning-interface.asd  package.xml
bullet_reasoning_interface/src/: facts.lisp  operations.lisp  package.lisp
continuous_interaction/: continuous-interaction.asd
continuous_interaction/src/: package.lisp
cram_execution_trace_server/src/: package.lisp
cram_plan_transformations/: cram-plan-transformations.asd  package.xml
cram_plan_transformations/src/: demo.lisp  main.lisp  package.lisp  parse-nl.lisp  problem-statement-notes.txt.lisp  prolog.lisp  query-game-log.lisp  query-mongodb.fasl  query-mongodb.lisp  query-prac.lisp  utilities.lisp
cram_sherpa_robots/cram_sherpa_hawk/: cram-sherpa-hawk.asd
cram_task_knowledge/: cram-task-knowledge.asd
cram_task_knowledge/src/: package.lisp  table-setting.lisp
map_annotation/: CMakeLists.txt
map_annotation/src/lisp/: map-annotation.asd
perception_process_module/: package.xml  perception-process-module.asd
perception_process_module/src/: package.lisp
robot_mask/: manifest.xml  robot-mask.asd
robot_mask/src/: package.lisp
visibility_costmap/: manifest.xml  visibility-costmap.asd
visibility_costmap/src/: package.lisp
